--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,13 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
   </head>
-  <body>
+  <body style="background-color:rgb(180, 190, 190); color:rgb(185, 79, 37)">
     <div class="container">
       <!-- Add Jumbotron to Header -->
       <div class="jumbotron text-center">
         <h1>Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p><a class="btn btn-success btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
 
       <!-- Add section for Mars News -->
@@ -49,7 +49,7 @@
           <!-- Mars Facts -->
           <div class="row" id="mars-facts">
             <h4>Mars Facts</h4>
-            {{ mars.facts | safe }}
+            <table class="table table-striped">{{mars.facts | safe }}</table>
           </div>
         </div>
       </div>
@@ -66,7 +66,8 @@
         {% for i in range(4) %}
         <div class="col-md-3">
           <div class = "thumbnail">
-              <img src="{{mars.hemisphere[i].img_url}}">
+              <img src="{{mars.hemisphere[i].img_url}}"
+                   class="img-responsive">
               <h2><b>{{mars.hemisphere[i].title}}</b></h2>
           </div>
       </div>
